crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_aggregation_sum.snap
---
source: crates/cypher-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 3
write_ops: 0
var_map_entries: 1
op[0]: Source(label=None, bind=0)
op[1]: Aggregate(input=0, keys=0, aggs=1)
op[2]: Project(input=1, cols=1)
