crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_create_node.snap
---
source: crates/cypher-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 0
write_ops: 1
var_map_entries: 1
write[0]: CreateNode(labels=["Person"], bind=Some(0))
