crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_match_where.snap
---
source: crates/cypher-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 4
write_ops: 0
var_map_entries: 1
op[0]: Source(label=None, bind=1)
op[1]: Filter(input=0)
op[2]: Source(label=None, bind=0)
op[3]: Project(input=2, cols=1)
