crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_match_where_pretty_tree.snap
---
source: crates/cypher-plan/src/lower.rs
expression: pretty(&plan)
---
Project [$0 AS _v0]
  Filter (($0.x = 1))
    Source (AS $0)
