crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_match_with.snap
---
source: crates/cypher-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 3
write_ops: 0
var_map_entries: 1
op[0]: Source(label=None, bind=0)
op[1]: With(input=0, cols=1, has_filter=false)
op[2]: Project(input=1, cols=1)
