crates/cypher-plan/src/snapshots/cypher_plan__lower__tests__plan_merge_node.snap
---
source: crates/cypher-plan/src/lower.rs
expression: render(&plan)
---
read_ops: 2
write_ops: 1
var_map_entries: 1
op[0]: Source(label=None, bind=1)
op[1]: Filter(input=0)
write[0]: MergeNode(labels=["Person"], bind=Some(0))
